Incorrect preview of mixed anisotropic shaders. #39577

Closed
opened 2014-04-03 10:52:29 +02:00 by William Hensley · 10 comments

System Information
Windows 7 and Radeon HD 5450

Blender Version
Broken: 2.69, 4789793

Short description of error
Incorrect preview of mixed anisotropic shaders with differing data.

Exact steps for others to reproduce the error
Add cube.
Add material.
Add mix shader.
Add two anisotropic shaders.
Set rotation on one of the Anisotropic shaders to .25

At this point, the material preview should be incorrect. For extra visibility of the issue, set the mix number to .999 and then tick it up to 1.

**System Information** Windows 7 and Radeon HD 5450 **Blender Version** Broken: 2.69, 4789793 **Short description of error** Incorrect preview of mixed anisotropic shaders with differing data. **Exact steps for others to reproduce the error** Add cube. Add material. Add mix shader. Add two anisotropic shaders. Set rotation on one of the Anisotropic shaders to .25 At this point, the material preview should be incorrect. For extra visibility of the issue, set the mix number to .999 and then tick it up to 1.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Arcayer

Added subscriber: @Arcayer

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Could you try with a more recent build ? I don't see anything weird or incorrect in 2.70 9caf7029, also an image that demonstrates what is correct and what is not would be nice.

Could you try with a more recent build ? I don't see anything weird or incorrect in 2.70 9caf7029, also an image that demonstrates what is correct and what is not would be nice.

I updated blender (c6d8540). Same result.

Alright, here's an example blend file. Cube.001 has material.001 and looks correct
Cube has material. The preview looks incorrect.

untitled.blend

I updated blender (c6d8540). Same result. Alright, here's an example blend file. Cube.001 has material.001 and looks correct Cube has material. The preview looks incorrect. [untitled.blend](https://archive.blender.org/developer/F83848/untitled.blend)

Can confirm that now, seems that the issue is caused by the roughness.

Can confirm that now, seems that the issue is caused by the roughness.

This issue was referenced by blender/blender-addons-contrib@5e5ec4c138

This issue was referenced by blender/blender-addons-contrib@5e5ec4c138de49005ea711d280e3e18794c9473d

This issue was referenced by 5e5ec4c138

This issue was referenced by 5e5ec4c138de49005ea711d280e3e18794c9473d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5e5ec4c138.

Closed by commit 5e5ec4c138.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39577
No description provided.