Fix T39577: cycles issue mixing anisotropic BSDFs with branched path tracer.